adding links to my socials and email

--- a/src/App.css
+++ b/src/App.css
@@ -161,6 +161,11 @@ a {
 .home {
   display: flex;
   justify-content: center;
+  align-items: center;
+}
+
+a{
+  margin: 1rem;
 }
 
 /* about page styles */
