--- a/src/App.css
+++ b/src/App.css
@@ -129,11 +129,15 @@ table {
 }
 
 /* 
-#9FA4C4
-
-
+#02FFE6 - #cadefc - #C3BEF0 - #CCA8E9 
+#FAF5FF - #E9D8FD - #D6BCFA - #B794F4 - #9F7AEA - #805AD5 - #553C9A - #44337A
+#263238
 
 */
+body {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 1.2rem;
+}
 /* App file */
 .myNamePicture {
   display: flex;
@@ -149,12 +153,12 @@ nav {
   display: flex;
   justify-content: space-evenly;
   padding: 2%;
-  background: #9fa4c4;
+  background: #cca8e9;
 }
 
 a {
   text-decoration: none;
-  color: #3e2a35;
+  color: #263238;
 }
 
 /* home file */
@@ -164,7 +168,7 @@ a {
   align-items: center;
 }
 
-a{
+a {
   margin: 1rem;
 }
 
@@ -184,7 +188,7 @@ p {
 hr {
   border-style: none;
   border-top-style: dotted;
-  border-color: #9fa4c4;
+  border-color: #cca8e9;
   border-width: 5px;
   width: 10%;
   margin: 0 auto;
@@ -202,4 +206,70 @@ hr {
   justify-content: space-evenly;
   align-items: center;
   flex-wrap: wrap;
+}
+
+/* projects page */
+.projectTitle {
+  text-align: center;
+  font-size: 2rem;
+  color: #263238;
+  font-weight: bold;
+}
+
+.foodTruck {
+  background: url("./components/img/truckTracker.png");
+  /* filter: blur(8px); */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding: 100px;
+}
+
+.quizApp {
+  background: url("./components/img/quizApp.png");
+  /* filter: blur(8px); */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding: 100px;
+}
+
+.nasa {
+  background: url("./components/img/nasa.png");
+  /* filter: blur(8px); */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding: 100px;
+}
+
+.rick {
+  background: url("./components/img/rick.png");
+  /* filter: blur(8px); */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding: 100px;
+}
+
+.con1 {
+  display: flex;
+  justify-content: space-evenly;
+  align-content: space-around;
+  flex-wrap: wrap;
+}
+
+.con1 div {
+  margin: 2%;
+}
+
+.con1 a {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 1.4rem;
+  background: #9f7aeadb;
+  text-align: center;
+  padding: 5%;
+  border-radius: 10px;
 }
