changing the body background

--- a/src/App.css
+++ b/src/App.css
@@ -139,6 +139,9 @@ font-family: 'Nerko One', cursive;
 body {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 1.2rem;
+  background-color: #e9d8fd;
+  background-image: url("/src/wild-flowers.png");
+  /* This is mostly intended for prototyping; please download the pattern and re-host for production environments. Thank you! */
 }
 
 h1,
