--- a/src/App.css
+++ b/src/App.css
@@ -128,159 +128,68 @@ table {
   border-spacing: 0;
 }
 
-/* 
-#02FFE6 - #cadefc - #C3BEF0 - #CCA8E9 
-#FAF5FF - #E9D8FD - #D6BCFA - #B794F4 - #9F7AEA - #805AD5 - #553C9A - #44337A
-#263238
-font-family: 'Nerko One', cursive;
-
-
-*/
-body {
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 1.2rem;
-  background-color: #e9d8fd;
-  background-image: url("/src/wild-flowers.png");
+img.me {
+  width: 15%;
 }
 
 h1,
 h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Merriweather", serif;
+  text-align: center;
+  font-size: 2rem;
+  font-weight: bold;
+}
+
+p,
 a {
-  font-family: "Nerko One", cursive;
-}
-
-/* App file */
-.myNamePicture {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.myNamePicture h1 {
-  font-size: 3rem;
-  color: #805ad5;
-}
-
-.myNamePicture img {
-  margin: 2%;
-  border-radius: 50%;
-  border: 7px solid #cca8e9;
-  width: 130px;
-  height: 130px;
-}
-
-nav {
-  display: flex;
-  justify-content: space-evenly;
-  padding: 2%;
-  background-color: #cca8e9;
-  background-image: url("/src/tileable-wood.png");
+  font-family: "Merriweather", serif;
+  color: black;
 }
 
 a {
   text-decoration: none;
-  color: #263238;
 }
 
-/* home file */
-.home {
+nav {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
+  justify-content: space-evenly;
+  width: 15%;
+  height: 100vh;
+  margin: 0 7% 0 2%;
 }
 
-.home h2 {
-  margin: 2%;
-  font-size: 2rem;
-  color: #cca8e9;
+h2 {
+  color: #9eb3b5;
 }
 
-a {
-  margin: 1rem;
+.app {
+  display: flex;
+}
+
+.myname-img {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  padding: 3% 0;
+}
+
+.my-name-title {
+  color: #58769c;
+  font-size: 3rem;
+}
+
+a.links {
   font-size: 1.5rem;
-}
-
-a:hover {
-  color: #44337a;
-}
-
-/* about page styles */
-
-.about h1 {
+  font-weight: bold;
   text-align: center;
-  margin: 2%;
-  font-size: 2rem;
-  color: #cca8e9;
 }
 
-p {
-  font-size: 1.2rem;
-  margin: 2%;
-  line-height: 30px;
-}
-
-hr {
-  border-style: none;
-  border-top-style: dotted;
-  border-color: #cca8e9;
-  border-width: 5px;
-  width: 10%;
-  margin: 0 auto;
-  clear: both;
-}
-
-/* Skills page */
-.skill img {
-  width: 100px;
-  border-radius: 50px;
-}
-
-.skill div {
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  flex-wrap: wrap;
-}
-
-.skill h2 {
-  text-align: center;
-  margin: 2%;
-  font-size: 2rem;
-  color: #cca8e9;
-}
-
-/* projects page */
-.project h2 {
-  text-align: center;
-  margin: 2%;
-  font-size: 2rem;
-  color: #cca8e9;
-}
-
-.projects {
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-.con1 {
-  display: flex;
-  justify-content: space-evenly;
-  align-content: space-around;
-  flex-wrap: wrap;
-}
-
-.con1 div {
-  margin: 2%;
-}
-
-.con1 a {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 1.4rem;
-  background: #9f7aeadb;
-  text-align: center;
-  padding: 7% 9%;
-  border-radius: 10px;
+a.links:hover {
+  color: #9eb3b5;
 }
