styled about me section

--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -4,7 +4,7 @@
   justify-content: space-evenly;
   align-items: center;
 }
-/* #31415D #ECDEC6 #9eb3b5*/
+/* #31415D #ECDEC6 #9eb3b5 #31415d7a*/
 
 .box {
   background-color: #31415d7a;
