--- a/src/components/About.css
+++ b/src/components/About.css
@@ -1,20 +1,29 @@
+.about {
+  margin: 2% 4%;
+}
 .about-me {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: column;
 }
 
 .about-me-img {
-  width: 90%;
+  /* width: 90%; */
 }
 
-.about-me-para {
-  width: 50%;
-  background-color: #fbecd175;
+.about-para {
+  /* width: 50%; */
+  background-color: #31415d7a;
   line-height: 1.4rem;
   padding: 3% 7%;
+}
+
+.about-para p {
+  color: #ecdec6;
 }
 
 .background-img {
   text-align: center;
 }
+/* #ECDEC6 */
