--- a/src/App.css
+++ b/src/App.css
@@ -1,133 +1,3 @@
-/* http://meyerweb.com/eric/tools/css/reset/ 
-   v2.0 | 20110126
-   License: none (public domain)
-*/
-
-html,
-body,
-div,
-span,
-applet,
-object,
-iframe,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-blockquote,
-pre,
-a,
-abbr,
-acronym,
-address,
-big,
-cite,
-code,
-del,
-dfn,
-em,
-img,
-ins,
-kbd,
-q,
-s,
-samp,
-small,
-strike,
-strong,
-sub,
-sup,
-tt,
-var,
-b,
-u,
-i,
-center,
-dl,
-dt,
-dd,
-ol,
-ul,
-li,
-fieldset,
-form,
-label,
-legend,
-table,
-caption,
-tbody,
-tfoot,
-thead,
-tr,
-th,
-td,
-article,
-aside,
-canvas,
-details,
-embed,
-figure,
-figcaption,
-footer,
-header,
-hgroup,
-menu,
-nav,
-output,
-ruby,
-section,
-summary,
-time,
-mark,
-audio,
-video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font-size: 100%;
-  font: inherit;
-  vertical-align: baseline;
-}
-/* HTML5 display-role reset for older browsers */
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-menu,
-nav,
-section {
-  display: block;
-}
-body {
-  line-height: 1;
-}
-ol,
-ul {
-  list-style: none;
-}
-blockquote,
-q {
-  quotes: none;
-}
-blockquote:before,
-blockquote:after,
-q:before,
-q:after {
-  content: "";
-  content: none;
-}
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-}
-
 img.me {
   width: 15%;
 }
@@ -154,18 +24,17 @@ a {
   text-decoration: none;
 }
 
+.app {
+  display: flex;
+}
+
 nav {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-evenly;
-  /* width: 15%; */
   height: 100vh;
-  margin: 0 7% 0 2%;
-}
-
-.app {
-  display: flex;
+  margin: 0 2% 0 2%;
 }
 
 .myname-img {
@@ -189,7 +58,7 @@ a.links {
 a.links:hover {
   color: #9eb3b5;
   background: #31415d7a;
-  padding: 7%;
+  padding: 2% 5%;
   border-radius: 10px;
 }
 
@@ -207,4 +76,102 @@ a.links:hover {
   background-color: #31415d7a;
   padding: 1% 2%;
   border-radius: 10px;
+}
+
+.con-2 {
+  padding: 5%;
+}
+
+/*------------------------------------------
+  Responsive Grid Media Queries - 1280, 1024, 768, 480
+   1280-1024   - desktop (default grid)
+   1024-768    - tablet landscape
+   768-480     - tablet 
+   480-less    - phone landscape & smaller
+--------------------------------------------*/
+
+@media all and (min-width: 480px) and (max-width: 768px) {
+  .app {
+    display: block;
+  }
+
+  nav {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-evenly;
+    height: 10vh;
+    margin: 0;
+  }
+
+  .me {
+    margin-top: 3%;
+  }
+
+  .myname-img {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    flex-direction: column;
+    padding: 3% 0;
+  }
+
+  a.links {
+    font-size: 1.3rem;
+  }
+
+  h1.my-name-title {
+    font-size: 2.5rem;
+  }
+
+  p.subtitle {
+    font-size: 1rem;
+  }
+
+  img.me {
+    width: 35%;
+  }
+}
+
+@media all and (max-width: 480px) {
+  .app {
+    display: block;
+  }
+
+  nav {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-evenly;
+    height: 10vh;
+    margin: 0;
+  }
+
+  .me {
+    margin-top: 3%;
+  }
+
+  .myname-img {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    flex-direction: column;
+    padding: 3% 0;
+  }
+
+  a.links {
+    font-size: 1.3rem;
+  }
+
+  h1.my-name-title {
+    font-size: 2.5rem;
+  }
+
+  p.subtitle {
+    font-size: 1rem;
+  }
+
+  img.me {
+    width: 35%;
+  }
 }
