--- a/src/components/About.css
+++ b/src/components/About.css
@@ -12,11 +12,12 @@
 .about-para {
   background-color: #31415d7a;
   line-height: 1.4rem;
-  padding: 3% 7%;
+  padding: 1% 7%;
 }
 
 .about-para p {
   color: #ecdec6;
+  line-height: 1.5rem;
 }
 
 .background-img {
