--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,3 +1,9 @@
+/* 
+text - #9eb3b5 
+background - #31415db8
+hover - #fee0ac
+title - #58769c
+*/
 img.me {
   width: 15%;
 }
@@ -17,24 +23,37 @@ h6 {
 p,
 a {
   font-family: "Merriweather", serif;
-  color: black;
+}
+
+nav {
+  padding-top: 5%;
+  display: flex;
+  /* flex-direction: column; */
+  align-items: center;
+  justify-content: space-evenly;
+  /* height: 100vh; */
+  /* margin-left: 3%; */
 }
 
 a {
   text-decoration: none;
+  font-size: 1.5rem;
+  font-weight: bold;
+  text-align: center;
+}
+
+nav a {
+  color: #9eb3b5;
+  background: #31415db8;
+  padding: 1% 3%;
+}
+
+nav a:hover {
+  color: #fee0ac;
 }
 
 .app {
-  display: flex;
-}
-
-nav {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-evenly;
-  height: 100vh;
-  margin: 0 2% 0 2%;
+  /* display: flex; */
 }
 
 .myname-img {
@@ -47,18 +66,6 @@ nav {
 .my-name-title {
   color: #58769c;
   font-size: 3rem;
-}
-
-a.links {
-  font-size: 1.5rem;
-  font-weight: bold;
-  text-align: center;
-  padding: 2% 5%;
-}
-
-a.links:hover {
-  color: #9eb3b5;
-  background: #31415db8;
 }
 
 .myname-img div {
